Transferred from the Adobe Open Source Subversion Repository
Revision: 8271
Author:   dsubrama@adobe.com
Date:     2009-06-25T23:25:28.723385Z

Log Message: 
-----------
Change the event type of List-based component's change, changing and caretChange events to a new event class: spark.events.IndexChangeEvent. 

QA: Yes
Doc: Yes
Checkintests: Pass
Mustella: List/DDL/ButtonBar tests pass
Reviewers: Hans & Jason

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/components/examples/DropDownListExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/components/examples/ListExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/spark/components/List.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/spark/src/spark/events/IndexChangeEvent.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/components/examples/ButtonBarExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/spark/components/ButtonBar.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/spark/components/supportClasses/ListBase.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/framework/src/mx/events/IndexChangedEvent.as</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274996 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/DropDownListExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/DropDownListExample.mxml
@@ -7,7 +7,7 @@
 	<fx:Script>
     	<![CDATA[
     	    import mx.collections.ArrayCollection;
-    	    import mx.events.IndexChangedEvent;
+    	    import spark.events.IndexChangeEvent; 
 
     	 [Bindable]
 			public var myDP:ArrayCollection = new ArrayCollection(
@@ -16,7 +16,7 @@
 				  {product:"Catalyst", price:300},
 				  {product:"FlashBuilder", price:400} ]);
 
-    		private function updateSelection(e:IndexChangedEvent):void
+    		private function updateSelection(e:IndexChangEvent):void
     		{
     			currSel.text = "Current Product = " + myDDL.selectedItem.product;
     			currPrc.text = "Price = $" + myDDL.selectedItem.price;
