Transferred from the Adobe Open Source Subversion Repository
Revision: 8811
Author:   tan@adobe.com
Date:     2009-07-25T00:40:55.350630Z

Log Message: 
-----------
Update the ASDoc samples for DropDownListExample and List. They were not compiling because of a typo. I also needed to update the DropDownList sample post renames. (selectionChanged-> change)

SDK-22397

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/components/examples/DropDownListExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/components/examples/ListExample.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274997 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/DropDownListExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/DropDownListExample.mxml
@@ -7,7 +7,7 @@
 	<fx:Script>
     	<![CDATA[
     	    import mx.collections.ArrayCollection;
-    	    import spark.events.IndexChangeEvent; 
+    	    import spark.events.IndexChangeEvent;
 
     	 [Bindable]
 			public var myDP:ArrayCollection = new ArrayCollection(
@@ -16,7 +16,7 @@
 				  {product:"Catalyst", price:300},
 				  {product:"FlashBuilder", price:400} ]);
 
-    		private function updateSelection(e:IndexChangEvent):void
+    		private function updateSelection(e:IndexChangeEvent):void
     		{
     			currSel.text = "Current Product = " + myDDL.selectedItem.product;
     			currPrc.text = "Price = $" + myDDL.selectedItem.price;
@@ -38,7 +38,7 @@
 			<s:DropDownList id="myDDL" prompt="Select One"
 				width="200" dataProvider="{myDP}"
 				labelField="product"
-				selectionChanged="updateSelection(event);"/>
+				change="updateSelection(event);"/>
 
 		</s:VGroup>
 
