Transferred from the Adobe Open Source Subversion Repository
Revision: 7939
Author:   jszeto@adobe.com
Date:     2009-06-18T00:10:15.473790Z

Log Message: 
-----------
Slider PARB Changes

•  remove dataTipOriginalPosition
•  remove dataTipInstance
•  positionDataTip() -> updateDataTip(dataTipInstance:IDataRenderer, initialPosition:Point)

QE Notes: None
Doc Notes: None
Bugs: None
Reviewer: Evtim

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/VSlider.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/components/examples/HSliderExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/HSlider.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/supportClasses/Slider.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/components/examples/NumericStepperExample.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275020 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/HSliderExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/HSliderExample.mxml
@@ -16,7 +16,7 @@
             <s:SimpleText width="100%" text="Drag the slider to change the image transparency"/>
 
             <s:HSlider id="hSlider" minimum="0" maximum="1" value="1" stepSize="0.1"
-                    valueInterval="0.1" liveDragging="true" change="fxImage.alpha=hSlider.value;"/>
+                    snapInterval="0.1" liveDragging="true" change="fxImage.alpha=hSlider.value;"/>
          </s:VGroup>
     </s:Panel>
 
