--- a/projects/spark/asdoc/en_US/spark/components/examples/LabelExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/LabelExample.mxml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- TextBoxExample.mxml -->
 <Application xmlns="http://ns.adobe.com/mxml/2009">
-     <Canvas top="0" bottom="0" left="0" right="0">
           <Graphic>
-               <TextBox x="0" y="200" height="75" width="75">
-                    <text>Hello World!</text>
+               <TextBox x="0" y="0" height="75" width="75">
+                    <text>This is a TextBox</text>
                </TextBox>
           </Graphic>
-     </Canvas>
+          <Group x="100" y="0">
+               <TextBox height="100" width="75" paddingTop="5" paddingLeft="5" paddingRight="5" paddingBottom="5">
+                    <text>This is a TextBox with a border drawn by a Rect.</text>
+               </TextBox>
+               <Rect width="100%" height="100%">
+                    <stroke>
+                         <SolidColorStroke color="red"/>
+                    </stroke>
+               </Rect>               
+          </Group>
 </Application>
